Resolved white space to right of screen

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+html,
 body {
   margin: 0;
   font-family: "LeagueSpartan-Bold", -apple-system, BlinkMacSystemFont,
@@ -5,6 +6,12 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 * {
